# medicinedonor

./: package-lock.json
backend/: .env  Cargo.toml
backend/src/: main.rs  state.rs
backend/src/models/: Donation.rs  admin.rs  doctor.rs  donor.rs  mod.rs  patient.rs  payment.rs
backend/src/routes/: Donation.rs  admin.rs  doctor.rs  donor.rs  get_all_pateints_details.rs  mod.rs  pateind_dataget.rs  patient.rs  payment.rs  update_patient.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  password.rs
react/medicinedonor/: index.html  package-lock.json  package.json  vite.config.js
react/medicinedonor/src/: App.jsx  Authpage.jsx  Login.jsx  api.js
react/medicinedonor/src/components/admin/: AdminNavbar.jsx  Adminhandle.jsx  Adminpage.jsx  AllPatients.jsx  ApprovedPatients.jsx  CompletedPatients.jsx  Dashboard.jsx  Doctor.jsx  Forgetpassword.jsx  Home.jsx  PatientsListBase.jsx  PendingPatients.jsx  RejectedPatients.jsx  adminPatientDetails.jsx
react/medicinedonor/src/components/donor/: Donorgetpatientdetails.jsx  Donorlogin.jsx  PaymentModal.jsx  donorlogin.jsx
react/medicinedonor/src/components/patients/: PatientDetails.jsx  patients.jsx
react/medicinedonor/src/store/: authSlice.js
