[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mongodb = "2.5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
argon2 = "0.5"
rand = "0.8"
anyhow = "1.0"
rand_core = "0.6"
jsonwebtoken = "8.3" 
# optional, for loading env vars
headers = "0.4" 
bson = "2.15.0" 
lettre = { version = "0.11.18", default-features = false, features = [
    "builder",
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport"
] }

futures = "0.3"
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"